--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://iamvijay98.github.io/Social-Media-App-Frontend",
+  "homepage": "https://iamvijay98.github.io/Social-Media-App-Frontend",
   "name": "social-media-new",
   "version": "0.1.0",
   "private": false,
